--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.solvd</groupId>
     <artifactId>law-firm</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>4.1</version>
     <packaging>jar</packaging>
 
     <properties>
